src: zip: ExtraFieldUtils: Resolve deprecation warnings